test/sema/gc/trait_function_call_through_generic_pointers.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait A {
  fn foo(self: borrowed Self) {}
  fn bar(self: borrowed Self) {}
  fn baz(self: borrowed Self) {}
  fn bazMut(self: borrowed mut Self) {}
}

fn foo<T : A>(p: *mut T) {
  (*p).foo();
}

fn bar<T : A>(p: *T) {
  (*p).bar();
}

fn baz<T : A>(p: *T) {
  (*p).baz();
}

fn bazMut<T : A>(p: *T) {
  // CHECK: [[# @LINE + 1 ]]:3: error: cannot unify 'T' with '&mut T'
  (*p).bazMut();
}

fn err<T : A>(p: *T) {
  // CHECK: [[# @LINE + 1 ]]:8: error: failed to find member 'err' in 'T'
  (*p).err();
}

fn main() {}
